# VeriSphere---Aadhaar-fraud-detection-system-

./: .gitignore  README.md  flask_app.py  pyproject.toml  requirements.txt
aadhaar_pipeline/: consistency.py  decision.py  detector.py  ocr.py  photo_compare.py  pipeline.py  qr_validation.py  tampering.py  validator.py
