[project]
name = "verisphere-aadhaar-fraud-detection-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "easyocr>=1.7.0",
    "flask>=3.0.0",
    "google-genai>=1.0.0",
    "gunicorn>=21.2.0",
    "huggingface-hub>=0.23.0",
    "imagecodecs>=2024.1.1",
    "numpy>=1.24.0",
    "opencv-python-headless>=4.8.0",
    "pandas>=2.0.0",
    "pillow>=9.0.0",
    "pyzbar>=0.1.9",
    "qreader>=3.0.0",
    "scikit-image>=0.21.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "ultralytics>=8.0.0",
    "zxing-cpp>=2.0.0",
]
